--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 
 scikit-learn==1.7.2
-joblib
-fastapi
-uvicorn
-numpy
-prometheus_client
-python-multipart
+joblib==1.5.2
+fastapi==0.119.0
+uvicorn==0.38.0
+numpy==1.26.4
+prometheus_client==0.23.1
+python-multipart==0.0.20
+
